Refactor card abilities into FCollections to protect access